Add FillIJ dataset conversion script and no-object image preprocessing
- Implemented `FillIJ_convert.py` for converting and sampling the FillIJ dataset into a YOLO-ready format.
- Added a markdown documentation file `FillIJ_convert.md` detailing the conversion process and usage examples.
- Created `no_obj_images_preprocess.py` to copy 1000 random images from the no-object dataset to the original dataset, ensuring no label files exist for these images.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ __pycache__
 
 finetune_dataset
 original_dataset
+
+test_images
+no_obj_dataset
+
+Traffic
+
+FullIJCNN2013
+
+original_dataset_addition
